; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_mos.c_mos_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_mos.c_mos_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ether = type { i32 }
%struct.mos_softc = type { i32* }

@MOS_ENDPT_TX = common dso_local global i64 0, align 8
@MOS_ENDPT_RX = common dso_local global i64 0, align 8
@MOS_ENDPT_INTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_ether*)* @mos_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mos_start(%struct.usb_ether* %0) #0 {
  %2 = alloca %struct.usb_ether*, align 8
  %3 = alloca %struct.mos_softc*, align 8
  store %struct.usb_ether* %0, %struct.usb_ether** %2, align 8
  %4 = load %struct.usb_ether*, %struct.usb_ether** %2, align 8
  %5 = call %struct.mos_softc* @uether_getsc(%struct.usb_ether* %4)
  store %struct.mos_softc* %5, %struct.mos_softc** %3, align 8
  %6 = load %struct.mos_softc*, %struct.mos_softc** %3, align 8
  %7 = getelementptr inbounds %struct.mos_softc, %struct.mos_softc* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load i64, i64* @MOS_ENDPT_TX, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @usbd_transfer_start(i32 %11)
  %13 = load %struct.mos_softc*, %struct.mos_softc** %3, align 8
  %14 = getelementptr inbounds %struct.mos_softc, %struct.mos_softc* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* @MOS_ENDPT_RX, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @usbd_transfer_start(i32 %18)
  %20 = load %struct.mos_softc*, %struct.mos_softc** %3, align 8
  %21 = getelementptr inbounds %struct.mos_softc, %struct.mos_softc* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i64, i64* @MOS_ENDPT_INTR, align 8
  %24 = getelementptr inbounds i32, i32* %22, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @usbd_transfer_start(i32 %25)
  ret void
}

declare dso_local %struct.mos_softc* @uether_getsc(%struct.usb_ether*) #1

declare dso_local i32 @usbd_transfer_start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
